--- a/src/views/admin/users_list.ejs
+++ b/src/views/admin/users_list.ejs
@@ -51,14 +51,14 @@
                         <label class="form-label">Password</label>
                         <input type="text" name="password" class="form-control" required>
                     </div>
-                    <div class="col-md-4">
-                        <label class="form-label">Role</label>
-                        <select name="role_id" class="form-select">
-                            <% roles.rows.forEach(r => { %>
+                <div class="col-md-4">
+                    <label class="form-label">Role</label>
+                    <select name="role_id" class="form-select">
+                            <% roles.forEach(r => { %>
                                 <option value="<%= r.id %>"><%= r.name %></option>
                             <% }) %>
-                        </select>
-                    </div>
+                    </select>
+                </div>
                 </div>
                 <div class="mt-3 text-end">
                     <button class="btn btn-primary">Tạo</button>
