--- a/src/views/admin/system.ejs
+++ b/src/views/admin/system.ejs
@@ -44,6 +44,7 @@
         </div>
         <div class="text-muted small">Tự động cập nhật mỗi 10s.</div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
     <script>
         const fmtMB = (val) => Math.round(val / 1024 / 1024);
         const fmtGB = (val) => (val / 1024 / 1024 / 1024).toFixed(2);
