--- a/src/views/admin/campaign_edit.ejs
+++ b/src/views/admin/campaign_edit.ejs
@@ -111,5 +111,6 @@
             $('#rules_json').val(JSON.stringify(collectRules()));
         });
     </script>
+    <%- include('../partials/footer') %>
 </body>
 </html>
