--- a/src/views/admin/dashboard.ejs
+++ b/src/views/admin/dashboard.ejs
@@ -20,7 +20,7 @@
     </div>
     <% } %>
 
-    <div class="container">
+    <div class="container mt-3">
         <div class="row mb-4 g-3">
             <div class="col-md-4">
                 <div class="card card-stat text-white bg-primary shadow-sm h-100">
@@ -148,5 +148,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <%- include('../partials/footer') %>
 </body>
 </html>
