--- a/src/views/admin/domain_detail.ejs
+++ b/src/views/admin/domain_detail.ejs
@@ -15,7 +15,7 @@
 <body class="bg-light">
     <%- include('../partials/header', { user, backUrl: '/' }) %>
 
-    <div class="container pb-5">
+    <div class="container pb-5 mt-3">
         <div class="card mb-4 shadow-sm">
             <div class="card-body d-flex justify-content-between align-items-center">
                 <div>
@@ -268,5 +268,6 @@
             $('#rules_json').val(JSON.stringify(rules));
         });
     </script>
+    <%- include('../partials/footer') %>
 </body>
 </html>
