--- a/src/views/admin/domain_detail.ejs
+++ b/src/views/admin/domain_detail.ejs
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body class="bg-light">
-    <%- include('../partials/header', { user, backUrl: '/' }) %>
+    <%- include('../partials/header', { user, backUrl: '/', active: 'redirect' }) %>
 
     <div class="container pb-5 mt-3">
         <div class="card mb-4 shadow-sm">
@@ -165,7 +165,6 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
     <script>
