--- a/src/views/admin/user_detail.ejs
+++ b/src/views/admin/user_detail.ejs
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light p-4">
-    <%- include('../partials/header', { user: viewer, backUrl: '/users' }) %>
+    <%- include('../partials/header', { user: viewer, backUrl: '/users', active: 'users' }) %>
     <div class="container" style="max-width: 800px;">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h3 class="mb-0">User: <%= target.username %></h3>
