--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -22,19 +22,28 @@
     <div class="collapse navbar-collapse" id="mainNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle <%= ['redirect','system','users'].includes(currentMenu) ? 'active' : '' %>" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle <%= currentMenu === 'redirect' ? 'active' : '' %>" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Chuc nang
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item <%= currentMenu === 'redirect' ? 'active' : '' %>" href="/redirect"><i class="fa-solid fa-shuffle me-2 text-primary"></i>Redirect</a></li>
-            <% if (isSuper) { %>
-              <li><a class="dropdown-item <%= currentMenu === 'system' ? 'active' : '' %>" href="/admin/system"><i class="fa-solid fa-server me-2 text-primary"></i>He thong</a></li>
-            <% } %>
-            <% if (isAdmin) { %>
-              <li><a class="dropdown-item <%= currentMenu === 'users' ? 'active' : '' %>" href="/users"><i class="fa-solid fa-users-gear me-2 text-primary"></i>Quan tri nguoi dung</a></li>
-            <% } %>
           </ul>
         </li>
+        <% if (isAdmin) { %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle <%= ['system','users'].includes(currentMenu) ? 'active' : '' %>" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Quan tri
+            </a>
+            <ul class="dropdown-menu">
+              <% if (isSuper) { %>
+                <li><a class="dropdown-item <%= currentMenu === 'system' ? 'active' : '' %>" href="/admin/system"><i class="fa-solid fa-server me-2 text-primary"></i>He thong</a></li>
+              <% } %>
+              <% if (isAdmin) { %>
+                <li><a class="dropdown-item <%= currentMenu === 'users' ? 'active' : '' %>" href="/users"><i class="fa-solid fa-users-gear me-2 text-primary"></i>User</a></li>
+              <% } %>
+            </ul>
+          </li>
+        <% } %>
       </ul>
 
       <div class="d-flex align-items-center gap-3 text-white ms-lg-auto">
